@@ -296,3 +296,5 @@
 20031026 ui/gtk/debugger.c, ui/gtk/pokefinder.c: correct behaviour if the
 	 window receives a delete event.
 20031026 pokefinder/pokefinder.c: ensure we get a prototype for memset.
+20031027 ui/gtk/gtkui.c: add confirmation dialog if the main window
+	 receives a delete-event.
